--- a/contact-me.html
+++ b/contact-me.html
@@ -19,7 +19,7 @@
     </tr>
   </table>
   <hr>
-  <form action="mailto:richardfitchard@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:richardfitchrd@gmail.com" method="post" enctype="text/plain">
     <label for="">Your Name:</label>
     <input type="text" name="yourName" id=""><br />
     <label for="">Your Email:</label>
